hn_tests/failing/test4.hn
hnMain = {
	plusX x = {
		f y = y
		f
	}
	print ((plusX 5) 4)
}